@@ -1,40 +1,52 @@
 plugins {
-    kotlin("jvm") version "2.1.20-RC3"
-    id("com.github.johnrengelman.shadow") version "8.1.1"
+    java
+    `maven-publish`
+    id("com.gradleup.shadow") version "8.3.0"
 }
 
-group = "net.serlith"
-version = "1.0-SNAPSHOT"
+group = "gg.pufferfish"
+version = "1.0"
 
 repositories {
     mavenCentral()
-    maven("https://hub.spigotmc.org/nexus/content/repositories/snapshots/") {
-        name = "spigotmc-repo"
-    }
-    maven("https://oss.sonatype.org/content/groups/public/") {
-        name = "sonatype"
-    }
 }
 
 dependencies {
-    compileOnly("org.spigotmc:spigot-api:1.18.2-R0.1-SNAPSHOT")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    compileOnly(files("lib/Carbon-API-1.8.8-R0.1-SNAPSHOT.jar")) // Any spigot that has public MapPalette.colors
 }
 
 val targetJavaVersion = 17
-kotlin {
-    jvmToolchain(targetJavaVersion)
+java {
+    val javaVersion = JavaVersion.toVersion(targetJavaVersion)
+    targetCompatibility = javaVersion
+    sourceCompatibility = javaVersion
+    if (JavaVersion.current() < javaVersion) {
+        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+    }
 }
 
-tasks.build {
-    dependsOn("shadowJar")
+tasks.compileJava {
+    options.compilerArgs.add("--add-modules=jdk.incubator.vector")
 }
 
-tasks.processResources {
-    val props = mapOf("version" to version)
-    inputs.properties(props)
-    filteringCharset = "UTF-8"
-    filesMatching("plugin.yml") {
-        expand(props)
+publishing {
+    publications {
+        create<MavenPublication>("maven") {
+            groupId = project.group.toString()
+            artifactId = project.name
+            version = project.version.toString()
+
+            artifact(tasks["jar"])
+
+            pom {
+                name.set(project.name)
+                description.set("Pufferfish SIMD operations")
+                url.set("https://pufferfish.host/")
+            }
+        }
+    }
+
+    repositories {
+        mavenLocal()
     }
 }
